--- a/WebNotify/WebNotify.csproj
+++ b/WebNotify/WebNotify.csproj
@@ -461,6 +461,37 @@
     <Content Include="Scripts\bootstrap.min.js" />
     <None Include="Scripts\jquery-1.11.3.intellisense.js" />
     <Content Include="Scripts\easyloader.js" />
+    <Content Include="Scripts\easyUI\columns-ext.js" />
+    <Content Include="Scripts\easyUI\customPlugins\jquery.easyui.customplugin.js" />
+    <Content Include="Scripts\easyUI\datagrid-filter.js" />
+    <Content Include="Scripts\easyUI\easyloader.js" />
+    <Content Include="Scripts\easyUI\jquery.easyui.min.js" />
+    <Content Include="Scripts\easyUI\jquery.easyui.mobile.js" />
+    <Content Include="Scripts\easyUI\jquery.min.js" />
+    <Content Include="Scripts\easyUI\locale\easyui-lang-af.js" />
+    <Content Include="Scripts\easyUI\locale\easyui-lang-am.js" />
+    <Content Include="Scripts\easyUI\locale\easyui-lang-ar.js" />
+    <Content Include="Scripts\easyUI\locale\easyui-lang-bg.js" />
+    <Content Include="Scripts\easyUI\locale\easyui-lang-ca.js" />
+    <Content Include="Scripts\easyUI\locale\easyui-lang-cs.js" />
+    <Content Include="Scripts\easyUI\locale\easyui-lang-cz.js" />
+    <Content Include="Scripts\easyUI\locale\easyui-lang-da.js" />
+    <Content Include="Scripts\easyUI\locale\easyui-lang-de.js" />
+    <Content Include="Scripts\easyUI\locale\easyui-lang-el.js" />
+    <Content Include="Scripts\easyUI\locale\easyui-lang-en.js" />
+    <Content Include="Scripts\easyUI\locale\easyui-lang-es.js" />
+    <Content Include="Scripts\easyUI\locale\easyui-lang-fr.js" />
+    <Content Include="Scripts\easyUI\locale\easyui-lang-it.js" />
+    <Content Include="Scripts\easyUI\locale\easyui-lang-jp.js" />
+    <Content Include="Scripts\easyUI\locale\easyui-lang-ko.js" />
+    <Content Include="Scripts\easyUI\locale\easyui-lang-nl.js" />
+    <Content Include="Scripts\easyUI\locale\easyui-lang-pl.js" />
+    <Content Include="Scripts\easyUI\locale\easyui-lang-pt_BR.js" />
+    <Content Include="Scripts\easyUI\locale\easyui-lang-ru.js" />
+    <Content Include="Scripts\easyUI\locale\easyui-lang-sv_SE.js" />
+    <Content Include="Scripts\easyUI\locale\easyui-lang-tr.js" />
+    <Content Include="Scripts\easyUI\locale\easyui-lang-zh_CN.js" />
+    <Content Include="Scripts\easyUI\locale\easyui-lang-zh_TW.js" />
     <Content Include="Scripts\jquery-1.11.3.js" />
     <Content Include="Scripts\jquery-1.11.3.min.js" />
     <Content Include="Scripts\jquery-1.11.3.min.map" />
